--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                     </a>
                 </div>
                 <div class="card">
-                    <a href="https://github.com/Induranga-kawishwara/portfolio" style="color: rgb(248, 246, 246)" target=”_blank” >
+                    <a href="https://dinil04.github.io/Portofolio/" style="color: rgb(248, 246, 246)" target=”_blank” >
                         <div class="box">
                             <img src="images/1000_F_207724115_uDivVYyyGp6WOS2HRNUWsny7cXMeVIMF.jpg" alt="">
                             <div class="text">Personal Portfolio Website</div>
