--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
         <div class="social-icons">
           <a href="https://www.facebook.com/dinil.hansindu/"><i class="fab fa-facebook"></i></a>
           <a href="https://twitter.com/DinilH78962"><i class="fab fa-twitter"></i></a>
-          <a href="https://www.linkedin.com/in/dinil-perera-320b84267/"><i class="fab fa-instagram"></i></a>
+          <a href="https://www.instagram.com/dinil.hansindu/"><i class="fab fa-instagram"></i></a>
           <a href="https://www.linkedin.com/in/dinil-perera-320b84267/"><i class="fab fa-linkedin"></i></a>
         </div>
       </footer>
