--- a/index.html
+++ b/index.html
@@ -293,10 +293,10 @@
     <footer class="footer">
         <p>© 2023 My Portfolio. All rights reserved. | Designed by <a href="https://yourwebsite.com">Dinil Perera</a></p>
         <div class="social-icons">
-          <a href="https://www.facebook.com/dinil.hansindu/"><i class="fab fa-facebook"></i></a>
-          <a href="https://twitter.com/DinilH78962"><i class="fab fa-twitter"></i></a>
-          <a href="https://www.instagram.com/dinil.hansindu/"><i class="fab fa-instagram"></i></a>
-          <a href="https://www.linkedin.com/in/dinil-perera-320b84267/"><i class="fab fa-linkedin"></i></a>
+          <a href="https://www.facebook.com/dinil.hansindu/" target="_blank"><i class="fab fa-facebook"></i></a>
+          <a href="https://twitter.com/DinilH78962" target="_blank"><i class="fab fa-twitter"></i></a>
+          <a href="https://www.instagram.com/dinil.hansindu/" target="_blank"><i class="fab fa-instagram"></i></a>
+          <a href="https://www.linkedin.com/in/dinil-perera-320b84267/" target="_blank"><i class="fab fa-linkedin"></i></a>
         </div>
       </footer>
 
